--- a/DummyContacts/DummyContacts-Info.plist
+++ b/DummyContacts/DummyContacts-Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSContactsUsageDescription</key>
+	<string>This app requires access to your contacts to function properly.</string>
 </dict>
 </plist>
